# c-learning

./: README.md
Test/: CMakeLists.txt  main.c
Week 1.2/Opdracht 1/: functions.c  main.c
Week 1.2/Opdracht 2/: CMakeLists.txt  main.c
Week 1.2/Opdracht 3/: main.c
Week 1.2/Opdracht 4/: CMakeLists.txt  main.c
Week 1.3/1.3.1/: CMakeLists.txt  main.c
Week 1.3/1.3.2/: main.c
Week 1.3/1.3.3/: CMakeLists.txt  main.c
Week 1.3/1.3.4/: main.c
Week 1.4/1.4.1/: CMakeLists.txt  main-back.c  main-copy.c  main.c
Week 1.4/1.4.2/: CMakeLists.txt  main.c
Week 1.4/1.4.3/: CMakeLists.txt  main.c
Week 1.4/1.4.4/: CMakeLists.txt  main-backup.c  main.c
Week 1.5/1.5.1/: CMakeLists.txt  main.c
Week 1.5/1.5.2/: CMakeLists.txt  main.c
Week 1.5/1.5.3/: CMakeLists.txt  main.c
Week 1.5/1.5.4/: CMakeLists.txt  main.c
Week 1.6/1.6.1/: CMakeLists.txt  main.c
Week 1.6/1.6.2/: CMakeLists.txt  functions.c  main.c
Week 1.6/1.6.3/: CMakeLists.txt  main.c  thomas.c  thomas.h
Week 1.6/1.6.4/: CMakeLists.txt  functions.c  main.c  thomas.c  thomas.h
Week 1.6/test/: main.c
Week 1/Opdracht2/: a.out  main.c
Week 1/Opdracht3/: CMakeLists.txt  hello.c
Week 11/11.1/: CMakeLists.txt  functions.h  main.c
Week 11/11.2/: CMakeLists.txt  main.c
Week 11/11.3/: CMakeLists.txt  main.c
Week 11/11.4/: CMakeLists.txt  main.c
Week 12/12.1/: CMakeLists.txt  main.c
Week 12/12.2/: CMakeLists.txt  main.c
Week 12/12.3/: CMakeLists.txt  main.c
Week 13/13.1/: CMakeLists.txt  main.c
Week 16/mastermind/: CMakeLists.txt  board.h  config.h  game.c  game.h  gues.h  main.c  score.h
(+23 files in other folders)
